--- a/.github/workflows/Dockerfile.ubuntu-cuda
+++ b/.github/workflows/Dockerfile.ubuntu-cuda
@@ -50,50 +50,50 @@ RUN if [ "${BUILD_WHEEL}" = "ON" ] && [ "${BUILD_ALL}" = "ON" ] \
         && exit 1 \
     ;fi
 
-# # Prevent interactive inputs when installing packages
-# ENV DEBIAN_FRONTEND=noninteractive
-# ENV TZ=America/Los_Angeles
-# ENV SUDO=command
+# Prevent interactive inputs when installing packages
+ENV DEBIAN_FRONTEND=noninteractive
+ENV TZ=America/Los_Angeles
+ENV SUDO=command
 
-# # Dependencies: basic
-# RUN apt-get update && apt-get install -y \
-#     git  \
-#     wget \
-#  && rm -rf /var/lib/apt/lists/*
+# Dependencies: basic
+RUN apt-get update && apt-get install -y \
+    git  \
+    wget \
+ && rm -rf /var/lib/apt/lists/*
 
-# # Dependencies: cmake
-# RUN CMAKE_VERSION_NUMBERS=$(echo "${CMAKE_VERSION}" | cut -d"-" -f2) \
-#  && wget -q https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION_NUMBERS}/${CMAKE_VERSION}.tar.gz \
-#  && tar -xf ${CMAKE_VERSION}.tar.gz \
-#  && cp -ar ${CMAKE_VERSION} ${HOME}
-# ENV PATH=${HOME}/${CMAKE_VERSION}/bin:${PATH}
+# Dependencies: cmake
+RUN CMAKE_VERSION_NUMBERS=$(echo "${CMAKE_VERSION}" | cut -d"-" -f2) \
+ && wget -q https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION_NUMBERS}/${CMAKE_VERSION}.tar.gz \
+ && tar -xf ${CMAKE_VERSION}.tar.gz \
+ && cp -ar ${CMAKE_VERSION} ${HOME}
+ENV PATH=${HOME}/${CMAKE_VERSION}/bin:${PATH}
 
-# # Dependencies: ccache
-# WORKDIR /root
-# RUN git clone https://github.com/ccache/ccache.git \
-#  && cd ccache \
-#  && git checkout v${CCACHE_VERSION} -b ${CCACHE_VERSION} \
-#  && mkdir build \
-#  && cd build \
-#  && cmake -DCMAKE_BUILD_TYPE=Release -DZSTD_FROM_INTERNET=ON .. \
-#  && make install -j$(nproc) \
-#  && which ccache \
-#  && ccache --version \
-#  && ccache -s
+# Dependencies: ccache
+WORKDIR /root
+RUN git clone https://github.com/ccache/ccache.git \
+ && cd ccache \
+ && git checkout v${CCACHE_VERSION} -b ${CCACHE_VERSION} \
+ && mkdir build \
+ && cd build \
+ && cmake -DCMAKE_BUILD_TYPE=Release -DZSTD_FROM_INTERNET=ON .. \
+ && make install -j$(nproc) \
+ && which ccache \
+ && ccache --version \
+ && ccache -s
 
-# # Download ccache from GCS bucket (optional)
-# # Example directory structure:
-# # CCACHE_DIR        = ~/.cache/ccache
-# # CCACHE_DIR_NAME   = ccache
-# # CCACHE_DIR_PARENT = ~/.cache
-# RUN CCACHE_DIR=$(ccache -p | grep cache_dir | grep -oE "[^ ]+$") \
-#  && CCACHE_DIR_NAME=$(basename ${CCACHE_DIR}) \
-#  && CCACHE_DIR_PARENT=$(dirname ${CCACHE_DIR}) \
-#  && mkdir -p ${CCACHE_DIR_PARENT} \
-#  && cd ${CCACHE_DIR_PARENT} \
-#  && (wget https://storage.googleapis.com/open3d-ci-cache/${CCACHE_TAR_NAME}.tar.gz || true) \
-#  && if [ -f ${CCACHE_TAR_NAME}.tar.gz ]; then tar -xf ${CCACHE_TAR_NAME}.tar.gz; fi
-# RUN ccache -s
+# Download ccache from GCS bucket (optional)
+# Example directory structure:
+# CCACHE_DIR        = ~/.cache/ccache
+# CCACHE_DIR_NAME   = ccache
+# CCACHE_DIR_PARENT = ~/.cache
+RUN CCACHE_DIR=$(ccache -p | grep cache_dir | grep -oE "[^ ]+$") \
+ && CCACHE_DIR_NAME=$(basename ${CCACHE_DIR}) \
+ && CCACHE_DIR_PARENT=$(dirname ${CCACHE_DIR}) \
+ && mkdir -p ${CCACHE_DIR_PARENT} \
+ && cd ${CCACHE_DIR_PARENT} \
+ && (wget https://storage.googleapis.com/open3d-ci-cache/${CCACHE_TAR_NAME}.tar.gz || true) \
+ && if [ -f ${CCACHE_TAR_NAME}.tar.gz ]; then tar -xf ${CCACHE_TAR_NAME}.tar.gz; fi
+RUN ccache -s
 
 # # Miniconda
 # ENV PATH="/root/miniconda3/bin:${PATH}"
