--- a/.github/workflows/ubuntu-cuda-all-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-all-gcloud.yml
@@ -23,6 +23,12 @@ jobs:
           - DOCKER_TAG_PREFIX: open3d-ubuntu-cuda-gcloud-ci:3-ML-SHARED-bionic
             CCACHE_TAR_NAME  : open3d-ubuntu-1804-cuda-ci-ccache
             VM_NAME_PREFIX   : open3d-ubuntu-cuda-gcloud-ci-3-ML-SHARED-bionic
+          - DOCKER_TAG_PREFIX: open3d-ubuntu-cuda-gcloud-ci:4-ML-bionic
+            CCACHE_TAR_NAME  : open3d-ubuntu-1804-cuda-ci-ccache
+            VM_NAME_PREFIX   : open3d-ubuntu-cuda-gcloud-ci-4-ML-bionic
+          - DOCKER_TAG_PREFIX: open3d-ubuntu-cuda-gcloud-ci:5-ML-focal
+            CCACHE_TAR_NAME  : open3d-ubuntu-2004-cuda-ci-ccache
+            VM_NAME_PREFIX   : open3d-ubuntu-cuda-gcloud-ci-5-ML-focal
     env:
       DEVELOPER_BUILD: ON
       PYTHON_VERSION: 3.6
