--- a/.github/workflows/ubuntu-cuda-all-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-all-gcloud.yml
@@ -75,7 +75,7 @@ jobs:
               --accelerator="count=2,type=nvidia-tesla-t4" \
               --maintenance-policy=TERMINATE \
               --machine-type=n1-standard-4 \
-              --boot-disk-size=120GB \
+              --boot-disk-size=240GB \
               --boot-disk-type=pd-ssd \
               --scopes https://www.googleapis.com/auth/devstorage.full_control \
               --metadata="install-nvidia-driver=True,proxy-mode=project_editors"; do
@@ -89,10 +89,11 @@ jobs:
       - name: VM copy code
         run: |
           # https://github.com/kyma-project/test-infra/issues/93#issuecomment-457263589
-          for i in $(gcloud compute os-login ssh-keys list | grep -v FINGERPRINT); do \
-              echo "Removing ssh key"; \
-              gcloud compute os-login ssh-keys remove --key $i || true; \
-          done
+          # https://stackoverflow.com/a/49647883
+          # for i in $(gcloud compute os-login ssh-keys list | grep -v FINGERPRINT); do \
+          #     echo "Removing ssh key"; \
+          #     gcloud compute os-login ssh-keys remove --key $i || true; \
+          # done
           gcloud compute scp ${GITHUB_WORKSPACE}/../Open3D.tar.gz ${{ env.VM_NAME }}:~ \
             --zone=${{ env.VM_ZONE }}
           gcloud compute ssh ${{ env.VM_NAME }} \
