--- a/.github/workflows/ubuntu-cuda-all-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-all-gcloud.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
 
+env:
+  GCE_CLI_GHA_VERSION: '302.0.0' # Fixed to avoid dependency on API changes
+
 jobs:
   build-container:
     name: Build container
