--- a/.github/workflows/ubuntu-cuda-all-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-all-gcloud.yml
@@ -23,15 +23,15 @@ jobs:
           - DOCKER_TAG_PREFIX: open3d-ubuntu-cuda-ci:2-bionic
             CCACHE_TAR_NAME  : open3d-ubuntu-1804-cuda-ci-ccache
             VM_NAME_PREFIX   : open3d-ubuntu-cuda-ci-2-bionic
-          # - DOCKER_TAG_PREFIX: open3d-ubuntu-cuda-ci:3-ml-shared-bionic
-          #   CCACHE_TAR_NAME  : open3d-ubuntu-1804-cuda-ci-ccache
-          #   VM_NAME_PREFIX   : open3d-ubuntu-cuda-ci-3-ml-shared-bionic
-          # - DOCKER_TAG_PREFIX: open3d-ubuntu-cuda-ci:4-ml-bionic
-          #   CCACHE_TAR_NAME  : open3d-ubuntu-1804-cuda-ci-ccache
-          #   VM_NAME_PREFIX   : open3d-ubuntu-cuda-ci-4-ml-bionic
-          # - DOCKER_TAG_PREFIX: open3d-ubuntu-cuda-ci:5-ml-focal
-          #   CCACHE_TAR_NAME  : open3d-ubuntu-2004-cuda-ci-ccache
-          #   VM_NAME_PREFIX   : open3d-ubuntu-cuda-ci-5-ml-focal
+          - DOCKER_TAG_PREFIX: open3d-ubuntu-cuda-ci:3-ml-shared-bionic
+            CCACHE_TAR_NAME  : open3d-ubuntu-1804-cuda-ci-ccache
+            VM_NAME_PREFIX   : open3d-ubuntu-cuda-ci-3-ml-shared-bionic
+          - DOCKER_TAG_PREFIX: open3d-ubuntu-cuda-ci:4-ml-bionic
+            CCACHE_TAR_NAME  : open3d-ubuntu-1804-cuda-ci-ccache
+            VM_NAME_PREFIX   : open3d-ubuntu-cuda-ci-4-ml-bionic
+          - DOCKER_TAG_PREFIX: open3d-ubuntu-cuda-ci:5-ml-focal
+            CCACHE_TAR_NAME  : open3d-ubuntu-2004-cuda-ci-ccache
+            VM_NAME_PREFIX   : open3d-ubuntu-cuda-ci-5-ml-focal
     env:
       DEVELOPER_BUILD: ON
       PYTHON_VERSION: 3.6
