--- a/cpp/benchmarks/core/CMakeLists.txt
+++ b/cpp/benchmarks/core/CMakeLists.txt
@@ -1,6 +1,13 @@
 target_sources(benchmarks PRIVATE
     HashMap.cpp
     MemoryManager.cpp
+    ParallelFor.cpp
     Reduction.cpp
     Zeros.cpp
 )
+
+if (BUILD_ISPC_MODULE)
+    open3d_ispc_target_sources(benchmarks PRIVATE
+        ParallelFor.ispc
+    )
+endif()
