--- a/.github/workflows/Dockerfile.openblas
+++ b/.github/workflows/Dockerfile.openblas
@@ -71,7 +71,7 @@ RUN python -m pip install -U \
 # CMake
 # PWD is /, camke will be installed to /root/${CMAKE_VER}/bin/cmake
 RUN CMAKE_VER_NUMBERS=$(echo "${CMAKE_VER}" | cut -d"-" -f2) \
- && wget https://github.com/Kitware/CMake/releases/download/v${CMAKE_VER_NUMBERS}/${CMAKE_VER}.tar.gz \
+ && wget -q https://github.com/Kitware/CMake/releases/download/v${CMAKE_VER_NUMBERS}/${CMAKE_VER}.tar.gz \
  && tar -xf ${CMAKE_VER}.tar.gz \
  && cp -ar ${CMAKE_VER} ${HOME}
 ENV PATH=${HOME}/${CMAKE_VER}/bin:${PATH}
@@ -86,7 +86,7 @@ RUN CCACHE_DIR=$(ccache -p | grep cache_dir | grep -oE "[^ ]+$") \
  && CCACHE_DIR_PARENT=$(dirname ${CCACHE_DIR}) \
  && mkdir -p ${CCACHE_DIR_PARENT} \
  && cd ${CCACHE_DIR_PARENT} \
- && wget https://storage.googleapis.com/open3d-ci-cache/${CCACHE_TAR_NAME}.tar.gz \
+ && wget -q https://storage.googleapis.com/open3d-ci-cache/${CCACHE_TAR_NAME}.tar.gz \
  && tar -xf ${CCACHE_TAR_NAME}.tar.gz \
  && ccache -s
 ENV PATH=/usr/lib/ccache:${PATH}
