--- a/.github/workflows/Dockerfile.openblas
+++ b/.github/workflows/Dockerfile.openblas
@@ -76,11 +76,13 @@ RUN CMAKE_VER_NUMBERS=$(echo "${CMAKE_VER}" | cut -d"-" -f2) \
  && cp -ar ${CMAKE_VER} ${HOME}
 ENV PATH=${HOME}/${CMAKE_VER}/bin:${PATH}
 
-# Download ccache from GCS bucket (optional)
+# Download ccache from GCS bucket
 # Example directory structure:
-# CCACHE_DIR        = ~/.cache/ccache
-# CCACHE_DIR_NAME   = ccache
-# CCACHE_DIR_PARENT = ~/.cache
+#   - CCACHE_DIR        = ~/.cache/ccache
+#   - CCACHE_DIR_NAME   = ccache
+#   - CCACHE_DIR_PARENT = ~/.cache
+# We need to set ccache size explicitly with -M, otherwise the defualt size is
+# *not* determined by ccache's default, but the downloaded ccache file's config.
 RUN CCACHE_DIR=$(ccache -p | grep cache_dir | grep -oE "[^ ]+$") \
  && CCACHE_DIR_NAME=$(basename ${CCACHE_DIR}) \
  && CCACHE_DIR_PARENT=$(dirname ${CCACHE_DIR}) \
@@ -88,6 +90,7 @@ RUN CCACHE_DIR=$(ccache -p | grep cache_dir | grep -oE "[^ ]+$") \
  && cd ${CCACHE_DIR_PARENT} \
  && wget -q https://storage.googleapis.com/open3d-ci-cache/${CCACHE_TAR_NAME}.tar.gz \
  && tar -xf ${CCACHE_TAR_NAME}.tar.gz \
+ && ccache -M 5G \
  && ccache -s
 ENV PATH=/usr/lib/ccache:${PATH}
 
