--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -330,7 +330,8 @@ jobs:
             setuptools==${{ env.STOOLS_VER }}
           python -m pip install -U pytest==${{ env.PYTEST_VER }}
           python -m pip install -U pytest-randomly==${{ env.PYTEST_RANDOMLY_VER }}
-          python -m pip install -U scipy==${{ env.SCIPY_VER }}
+          python -m pip install -U scipy==${{ env.SCIPY_VER }} `
+            tensorboard==${{ env.TENSORFLOW_VER }}
           $pi_tag=(python -c "import sys; print(f'cp{sys.version_info.major}{sys.version_info.minor}')")
           $PIP_PKG_NAME=(Get-ChildItem pip_package\open3d*-$pi_tag-*.whl).Name
           echo "Installing Open3D wheel pip_package\$PIP_PKG_NAME in virtual environment..."
