--- a/.github/workflows/Dockerfile.ubuntu-cuda
+++ b/.github/workflows/Dockerfile.ubuntu-cuda
@@ -29,6 +29,7 @@ SHELL ["/bin/bash", "-c"]
 RUN apt-get update && apt-get install -y \
     git  \
     wget \
+    curl \
  && rm -rf /var/lib/apt/lists/*
 
 # Dependencies: cmake
@@ -99,10 +100,13 @@ RUN source /root/Open3D/util/ci_utils.sh \
  && install_python_dependencies with-conda with-jupyter
 
 # Open3D WebRTC dependencies
-RUN apt-get update && apt-get install -y \
-    nodejs \
-    npm \
- && rm -rf /var/lib/apt/lists/*
+RUN NODE_SETUP_SHA256=22e2048e76f0b0dd5e126cb816e59665ca4b402ffe9bb542005ad661b36a9eb6 \
+ && wget https://deb.nodesource.com/setup_16.x \
+ && sha256sum --status -c <(echo "$NODE_SETUP_SHA256 setup_16.x") \
+ && bash setup_16.x \
+ && apt-get install -y nodejs \
+ && rm -rf /var/lib/apt/lists/* \
+ && node --version
 RUN npm install -g yarn \
  && yarn --version
 
