add temporary fix for nodejs certificate

--- a/.github/workflows/Dockerfile.ubuntu-cuda
+++ b/.github/workflows/Dockerfile.ubuntu-cuda
@@ -100,7 +100,15 @@ RUN source /root/Open3D/util/ci_utils.sh \
  && install_python_dependencies with-conda with-jupyter
 
 # Open3D WebRTC dependencies
-RUN NODE_SETUP_SHA256=22e2048e76f0b0dd5e126cb816e59665ca4b402ffe9bb542005ad661b36a9eb6 \
+# Temporary fix for cetificate issue:
+# https://github.com/nodesource/distributions/issues/1266#issuecomment-932422525
+RUN apt-get update && apt-get install -y \
+    openssl \
+    ca-certificates \
+ && rm -rf /var/lib/apt/lists/* \
+ && rm -rf /usr/share/ca-certificates/mozilla/DST_Root_CA_X3.crt \
+ && update-ca-certificates \
+ && NODE_SETUP_SHA256=22e2048e76f0b0dd5e126cb816e59665ca4b402ffe9bb542005ad661b36a9eb6 \
  && wget https://deb.nodesource.com/setup_16.x \
  && sha256sum --status -c <(echo "$NODE_SETUP_SHA256 setup_16.x") \
  && bash setup_16.x \
