--- a/cpp/tests/core/CMakeLists.txt
+++ b/cpp/tests/core/CMakeLists.txt
@@ -15,6 +15,7 @@ target_sources(tests PRIVATE
     SizeVector.cpp
     Tensor.cpp
     TensorCheck.cpp
+    TensorFunction.cpp
     TensorList.cpp
     TensorObject.cpp
 )
