--- a/cpp/benchmarks/core/CMakeLists.txt
+++ b/cpp/benchmarks/core/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(benchmarks PRIVATE
     BinaryEW.cpp
     HashMap.cpp
+    Linalg.cpp
     MemoryManager.cpp
     ParallelFor.cpp
     Reduction.cpp
