--- a/.github/workflows/ubuntu-openblas.yml
+++ b/.github/workflows/ubuntu-openblas.yml
@@ -17,33 +17,30 @@ env:
   GCE_CLI_GHA_VERSION: '302.0.0'      # Fixed to avoid dependency on API changes
 
 jobs:
-  # openblas-amd64:
-  #   runs-on: ubuntu-20.04
-  #   strategy:
-  #     fail-fast: false
-  #   steps:
-  #     - name: Checkout source code
-  #       uses: actions/checkout@v2
-  #     - name: Maximize build space
-  #       run: |
-  #         source util/ci_utils.sh
-  #         maximize_ubuntu_github_actions_build_space
-  #     - name: Docker build
-  #       run: |
-  #         docker/docker_build.sh openblas-amd64-py310-dev
-  #     - name: GCloud CLI setup
-  #       uses: google-github-actions/setup-gcloud@v0.2.1
-  #       with:
-  #         version: ${{ env.GCE_CLI_GHA_VERSION }}
-  #         service_account_key: ${{ secrets.GCE_SA_KEY_DOCS_CI }}
-  #         project_id: ${{ secrets.GCE_DOCS_PROJECT }}
-  #         export_default_credentials: true
-  #     - name: Upload ccache to GCS
-  #       run: |
-  #         gsutil cp ${GITHUB_WORKSPACE}/open3d-ci-openblas-amd64.tar.gz gs://open3d-ci-cache/ || true
-  #     - name: Docker test
-  #       run: |
-  #         docker/docker_test.sh openblas-amd64-py310-dev
+  openblas-amd64:
+    runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v2
+      - name: Maximize build space
+        run: |
+          source util/ci_utils.sh
+          maximize_ubuntu_github_actions_build_space
+      - name: Docker build
+        run: |
+          docker/docker_build.sh openblas-amd64-py310-dev
+      - name: GCloud CLI setup
+        uses: google-github-actions/setup-gcloud@v0.2.1
+        with:
+          version: ${{ env.GCE_CLI_GHA_VERSION }}
+          service_account_key: ${{ secrets.GCE_SA_KEY_DOCS_CI }}
+          project_id: ${{ secrets.GCE_DOCS_PROJECT }}
+          export_default_credentials: true
+      - name: Docker test
+        run: |
+          docker/docker_test.sh openblas-amd64-py310-dev
 
   # With forked repo, the GitHub secret is not available.
   skip-arm64-check-on-fork:
@@ -71,10 +68,9 @@ jobs:
       fail-fast: false
     env:
       # Export everything from matrix to be easily used.
-      # Docker tag and ccache names must be consistent with docker_build.sh
+      # Docker tag must be consistent with docker_build.sh
       CI_CONFIG          : openblas-arm64-py310-dev
       GCE_INSTANCE_PREFIX: open3d-ci-openblas-arm64-py310-dev
-      CCACHE_TAR_NAME    : open3d-ci-openblas-arm64
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
@@ -143,13 +139,6 @@ jobs:
             --zone="${GCE_ZONE}" \
             --command="sudo docker run --rm arm64v8/ubuntu:20.04 uname -p \
                     && sudo Open3D/docker/docker_build.sh ${CI_CONFIG}"
-      - name: VM ccache upload
-        if: ${{ github.ref == 'refs/heads/master' }}
-        run: |
-          gcloud compute ssh "${INSTANCE_NAME}" \
-            --zone="${GCE_ZONE}" \
-            --command="ls -alh \
-                    && gsutil cp ${CCACHE_TAR_NAME}.tar.gz gs://open3d-ci-cache/"
       - name: VM run docker
         run: |
           gcloud compute ssh "${INSTANCE_NAME}" \
