--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -55,6 +55,12 @@ jobs:
       - name: Disk space used
         run: Get-PSDrive
 
+      - name: Setup Windows SDK
+        - uses: actions/checkout@v3
+        - uses: GuillaumeFalourd/setup-windows10-sdk-action@v1.7
+          with:
+            sdk-version: 19041
+
       - name: Install CUDA
         if: ${{ matrix.BUILD_CUDA_MODULE == 'ON' }}
         run: |
@@ -107,6 +113,7 @@ jobs:
           }
           cmake -G "Visual Studio 16 2019" -A x64 `
             -DDEVELOPER_BUILD="${env:DEVELOPER_BUILD}" `
+            -DCMAKE_SYSTEM_VERSION=10.0.19041.0
             -DBUILD_EXAMPLES=OFF `
             -DCMAKE_INSTALL_PREFIX="C:\Program Files\Open3D" `
             -DBUILD_SHARED_LIBS=${{ matrix.BUILD_SHARED_LIBS }} `
