--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -56,9 +56,9 @@ jobs:
         run: Get-PSDrive
 
       - name: Setup Windows SDK
-        - uses: GuillaumeFalourd/setup-windows10-sdk-action@v1.7
-          with:
-            sdk-version: 19041
+        uses: GuillaumeFalourd/setup-windows10-sdk-action@v1.7
+        with:
+          sdk-version: 19041
 
       - name: Install CUDA
         if: ${{ matrix.BUILD_CUDA_MODULE == 'ON' }}
