--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -112,7 +112,7 @@ jobs:
           }
           cmake -G "Visual Studio 16 2019" -A x64 `
             -DDEVELOPER_BUILD="${env:DEVELOPER_BUILD}" `
-            -DCMAKE_SYSTEM_VERSION=10.0.19041.0
+            -DCMAKE_SYSTEM_VERSION=10.0.19041.0 `
             -DBUILD_EXAMPLES=OFF `
             -DCMAKE_INSTALL_PREFIX="C:\Program Files\Open3D" `
             -DBUILD_SHARED_LIBS=${{ matrix.BUILD_SHARED_LIBS }} `
