--- a/cpp/tests/t/geometry/CMakeLists.txt
+++ b/cpp/tests/t/geometry/CMakeLists.txt
@@ -4,7 +4,8 @@ target_sources(tests PRIVATE
     PointCloud.cpp
     TensorMap.cpp
     TriangleMesh.cpp
-    BoundingVolume.cpp
+    AxisAlignedBoundingBox.cpp
+    OrientedBoundingBox.cpp
     VoxelBlockGrid.cpp
     VtkUtils.cpp
 )
