--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -60,7 +60,7 @@ open3d_add_example(SLACIntegrate)
 open3d_add_example(TIntegrateRGBD)
 open3d_add_example(TOdometryRGBD)
 open3d_add_example(TriangleMesh)
-if (TARGET Open3D::3rdparty_openmap)
+if (TARGET Open3D::3rdparty_openmp)
     open3d_add_example(TrimMeshBasedOnPointCloud Open3D::3rdparty_openmp)
 else ()
     open3d_add_example(TrimMeshBasedOnPointCloud)
